# QML_HonorsThesis

./: README.md  pyproject.toml  run-jupyter-lab  shell.nix
.ipynb_checkpoints/: Tests-checkpoint.ipynb
Workbooks/: GAN_Bell.ipynb  variational_classifier.ipynb
